--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
   sign_in_button: ^3.2.0
+  get: ^4.6.6
+  google_mlkit_text_recognition: ^0.14.0
+  image_picker: ^1.1.2
+  camera: ^0.11.0+2
   
 dev_dependencies:
   flutter_test:
